# spark-engine

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt
cmake/: sparkConfig.cmake.in
include/spark/: spark.hpp
include/spark/events/: connection.hpp  dispatcher.hpp  interface.hpp  memory.hpp  pipeline.hpp  pipeline_delegate.hpp  type_index.hpp
include/spark/utility/: interface.hpp  print.hpp
modules/ecs/: CMakeLists.txt
modules/events/: CMakeLists.txt
modules/graphics/: CMakeLists.txt
modules/math/: CMakeLists.txt
modules/types/: CMakeLists.txt
modules/utility/: CMakeLists.txt
spark-engine/: CMakeLists.txt
spark-engine/include/spark/: spark.hpp
spark-engine/modules/core/: CMakeLists.txt
spark-engine/modules/core/include/spark/: core.hpp
spark-engine/modules/core/include/spark/core/: list.hpp  primitives.hpp  print.hpp  program.hpp  sorting.hpp  span.hpp  traits.hpp  trivials.hpp  utility.hpp
spark-engine/modules/ecs/: CMakeLists.txt
spark-engine/modules/ecs/include/spark/: ecs.hpp
spark-engine/modules/ecs/include/spark/ecs/: components.hpp  entity.hpp  index.hpp  registry.hpp  sparse_set.hpp  storage.hpp  view.hpp
spark-engine/modules/events/: CMakeLists.txt
spark-engine/modules/events/include/spark/: events.hpp
spark-engine/modules/events/include/spark/events/: connection.hpp  connections.hpp  dispatcher.hpp  family.hpp  index.hpp  signal.hpp  sink.hpp
spark-engine/modules/math/: CMakeLists.txt
spark-engine/modules/math/include/spark/: math.hpp
spark-engine/modules/math/include/spark/math/: matrix.hpp  vector.hpp
spark-test/: CMakeLists.txt
spark-test/source/: main.cpp
